Edit Page Description for Google Search

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Arturo Avilés Castellanos"
-description: "A resume template for Jekyll and GitHub Pages sites."
+description: "Computer Science Student in Mexico City."
 
 # Build settings
 markdown: kramdown
