Fix Project name

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,7 +9,7 @@
   description: Used Ionic and Cordova to create an app for the Appstore and Playstore that lets you be updated of the Canadian Chamber Events, Attendants at Mexico.
 
 #Springfield Donut Eater's User Group
-- project: Springfield Donut Eater's User Group
+- project: Lightbulbs Android Game
   role: Java Developer
   duration: Jan, 2015 &mdash; May, 2015
   url: "https://play.google.com/store/apps/details?id=com.castilla.eduardo.lightbulbs&hl=en"
