--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,15 +1,15 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: Beer for the World
+- organization: ACM Student Chapter at ITESM CEM
   role: Volunteer
-  year: 2008 &mdash; Present
-  url: http://beerfortheworld.com
-  summary: Organized fund drives and participated in fundraising events for the benefit of families in third world countries without proper access to malt beverages.
+  year: Jan, 2015 &mdash; May, 2015
+  # url: http://beerfortheworld.com
+  summary: Solved Programming Challenges w/ Online Judges (SPOJ & COJ).
 
 
-- organization: Springfield Nuclear Workers Labor Union
-  role: Member in Good Standing
-  year: 1994 &mdash; Present
-  url: http://snwlu.org
-  summary: Founding member of the local nuclear workers labor union.
+- organization: AIESEC at ITESM CEM
+  role: Volunteer OGIP Manager
+  year: Jan, 2014 &mdash; Jan, 2015
+  url: https://aiesec.org/
+  summary: Enabled young people to gain relevant skills for their future careers by working within a global environment within small to medium sized businesses, multi-national corporations, and NGO's with internships ranging from 2-18 months.
