Add ACM URL and change tab name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Arturo Avilés"
+title: "Arturo Avilés, Software Developer"
 description: "Software Developer."
 
 # Build settings
