--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -4,7 +4,7 @@
 - organization: ACM Student Chapter at ITESM CEM
   role: Volunteer
   year: Jan, 2015 &mdash; May, 2015
-  # url: http://beerfortheworld.com
+  url: https://www.acm.org/
   summary: Solved Programming Challenges w/ Online Judges (SPOJ & COJ).
 
 
