--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,7 +6,7 @@
   role: Ionic Developer
   duration: Sep, 2017 &mdash; Dec, 2017
   # url: "#"
-  description: Used Ionic and Cordova to create an app for the Appstore and Playstore that lets you be updated of the Canadian Chamber Events, Attendants at Mexico.
+  description: • Created an app for iOS and Android using Ionic 3 with Cordova for the Canadian Chamber of Commerce at Mexico.
 
 #Springfield Donut Eater's User Group
 - project: Lightbulbs Android Game
