--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,15 @@
 # Skills
 # Donut design
-- skill: Donut design
-  description: Sprinkle art, icing design, eclair management, taste testing, donut/coffee pairing research
+- skill: Programming Languages
+  description: Python, Javascript, Ruby, C, Swift, Java, C#, CSS, HTML, PHP.
 
 # Craft beer brewing
-- skill: Craft beer brewing
-  description: Hops inspection, brew testing, distribution management, bottle label design, festival and event management
+- skill: Operating Systems
+  description: Mac OSX, Linux, Windows, iOS, Android.
 
 # Family leadership
-- skill: Family leadership
-  description: Bread winning, conflict resolution, couch inspection, TV longevity testing
+- skill: Databases
+  description: MySQL, MongoDB, SQLite, Postgresql, Redis.
+
+- skill: Other
+  description: Git, Bash, Gitlab CI, Travis CI.
